--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Serjio89/frontend-project-46#readme",
   "dependencies": {
+    "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
