--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,10 @@
+---
+
 plugins:
   - jest
-  - babel
 
 env:
   node: true
-  jest: true
-  browser: true
-  es2021: true
 
 extends:
   - 'airbnb-base'
@@ -14,9 +12,11 @@ extends:
 
 parserOptions:
   ecmaVersion: latest
-  sourceType: module
 
-rules: {
-  "no-console": "off",
-  "import/extensions": "off"
-}
+rules:
+  no-console: 0
+  import/extensions:
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
