--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": "^10.0.0",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
