--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,18 +1,12 @@
----
-
-plugins:
-  - jest
-
 env:
-  node: true
-
+  es2021: true
+overrides: []
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
 extends:
   - 'airbnb-base'
   - 'plugin:jest/recommended'
-
-parserOptions:
-  ecmaVersion: latest
-
 rules:
   no-console: 0
   import/extensions:
