--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,3 +14,5 @@ rules:
     - ignorePackages
     - js: always
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+settings:
+  import/core-modules: [js-yaml]
