--- a/package.json
+++ b/package.json
@@ -21,19 +21,18 @@
   },
   "homepage": "https://github.com/Serjio89/frontend-project-46#readme",
   "dependencies": {
-    "@jest/globals": "^29.5.0",
-    "chalk": "^5.2.0",
     "commander": "^10.0.0",
-    "eslint": "^8.35.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest-globals": "^0.1.7",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jest-globals": "^0.1.7",
+    "@jest/globals": "^29.5.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1"
   }
 }
